reading some json file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <button id="getText">
   Get Text
 </button>
+<button id="getColor">Get Color</button>
+<div id="output"></div>
+<div id="outputColor">1:</div>
 
 <script src="index.js"></script>
 </body>
